# SF-Analysis-nu

./: .gitignore  CLAUDE.md  PARSER-USAGE.md  README.md  SolidFire-Field-Component-Mapping.md  analyze-field-mappings.nu  analyze_field_mappings.py  filter-examples.nu  pyproject.toml  sf-analysis-tool.1  sf-log-parser.nu  sf-tools.nu  test-nushell-queries.nu
data/: README.md  SF_MASTERINFO-UNHEALTHY  minimal_vector.toml  sf-smallmaster  simple_vector.toml  simplelog  snapshot-filtered.json  snapshot-test.json  vector.toml
sf-filter-rust/: Cargo.toml
sf-filter-rust/src/: main.rs
sf-parser-rust/: Cargo.toml
sf-parser-rust/src/: main.rs
src/: load_jsonl.nu  parsesfv2.nu  parsesfv3.nu  parsesfv4.nu  parsesfv5.nu  preprocess.nu  sf_parser.rs  sf_preprocessor.py
src/oldcode/: parse_simple_vector.nu  parse_simplelog_ag.nu  parse_with_ag.nu  parse_with_vector.nu  parseme.nu  parseme.nu.1
