[package]
name = "sf-filter"
version = "1.0.0"
edition = "2021"
description = "Fast time-range filter for SolidFire parsed JSON logs"
authors = ["SolidFire Analysis Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rayon = "1.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"