[package]
name = "sf-parser"
version = "1.1.0"
edition = "2021"
description = "High-performance SolidFire log parser with consistent schema and nushell compatibility"
authors = ["SolidFire Analysis Team"]

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rayon = "1.8"
arrow = { version = "53.0", features = ["csv", "json"] }
parquet = { version = "53.0", features = ["arrow", "async"] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
